# ChangeLog for dev-java/jdepend
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/jdepend/ChangeLog,v 1.56 2014/09/07 15:09:36 ercpe Exp $

*jdepend-2.9-r5 (07 Sep 2014)

  07 Sep 2014; Johann Schmitz <ercpe@gentoo.org> +jdepend-2.9-r5.ebuild:
  Bump to EAPI=5

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> jdepend-2.9-r4.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  31 Dec 2011; Ralph Sennhauser <sera@gentoo.org> jdepend-2.9-r4.ebuild:
  Drop ia64 support #345433

  03 May 2011; Fabian Groffen <grobian@gentoo.org> jdepend-2.9-r4.ebuild:
  Marked ~x64-freebsd

  16 Jul 2010; Fabian Groffen <grobian@gentoo.org> jdepend-2.9-r4.ebuild:
  Marked ~x64-macos

  15 Jan 2010; Ulrich Mueller <ulm@gentoo.org> jdepend-2.9-r4.ebuild:
  LICENSE is identical with BSD, bug 301123.

  03 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  jdepend-2.9-r4.ebuild:
  Transfer Prefix keywords

  14 Jan 2008; Vlastimil Babka <caster@gentoo.org> jdepend-2.9-r4.ebuild:
  Remove the now obsolete WANT_SPLIT_ANT variable.

  04 Jan 2008; Vlastimil Babka <caster@gentoo.org> -jdepend-2.9-r3.ebuild:
  Clean old version.

  25 Nov 2007; Brent Baude <ranger@gentoo.org> jdepend-2.9-r4.ebuild:
  Marking jdepend-2.9-r4 ppc for bug

  18 Nov 2007; Markus Rothe <corsair@gentoo.org> jdepend-2.9-r4.ebuild:
  Stable on ppc64; bug #199250

  18 Nov 2007; Dawid Węgliński <cla@gentoo.org> jdepend-2.9-r4.ebuild:
  Stable on x86 (bug #199250)

  17 Nov 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  jdepend-2.9-r4.ebuild:
  amd64 stable, bug #199250.

  09 May 2007; Petteri Räty <betelgeuse@gentoo.org> -jdepend-2.6-r1.ebuild:
  Remove old version using generation 1.

*jdepend-2.9-r4 (09 May 2007)

  09 May 2007; Petteri Räty <betelgeuse@gentoo.org> +jdepend-2.9-r4.ebuild:
  No need to symlink the jar to /usr/share/ant-core/lib with ant 1.7 as it
  brings the jar in via the launcher.
