@@ -3,17 +3,23 @@ Hash: SHA256
 
 DIST jdepend-2.9.zip 302836 SHA256 202de62e2f3d0667cc464720d5897d0ccb29767ec24e0a4d4c5bd6c4d37425a4 SHA512 93ae1ca82422be0dce9794f25ad98c078da7437bca59c697405806a462f81b52028e0536075e2a2f428d8f8c5a27ae50fa7a580b75edbd4e8c9c750315b1c919 WHIRLPOOL a6552404d405e2ef51a40c508737ff00fd7a5350f71f4c5913563b588903279e4a49bef71b9af0c10032f4ad5e45afeb2bba55cca9cbe1c8aeb0451ac0c337d3
 EBUILD jdepend-2.9-r4.ebuild 1044 SHA256 1ddd9d191b15fa9df0983448ab2a870793094329975a8301f3e4046afdfc7978 SHA512 f549c30b0c0d6106530de87b1ed12ddaef7f0865a3e5b0b56d0fec3e00433a7d716527cf16e4cd0264073de3c6d10403e3de901d0a0fb7490e6df003a4b61d4b WHIRLPOOL 90dd2db457c084ee8fa2ebb61f9b62b771d216931f99b4b076d219b55dede5265aae11879b64769f20d10d35242aa70a1efc295d13d985e3dc94cd260f8d769b
-EBUILD jdepend-2.9-r5.ebuild 1043 SHA256 e30f830b55f07a8e119ba7fdcb6a710172152c906e9bed25bf0e53416fd09540 SHA512 121b2e760efc0ca0f0983b9dc3dbe59a69a840e8b21b3d32a6b7d89fbb481df1debfdfe866a138fc88acee4981906642f9abc082148404dc6583ffe667b6b89d WHIRLPOOL 1ec816f640f19e40c18b239e23a6aba42289a022312fea21c2bf1b6bb24bff0c4716e05733cb81a7199b7d83ea150277e3c6b444ae6ba69f55b562fef7bd8cb2
-MISC ChangeLog 6450 SHA256 995039e2d7a5ce6a695316a623c4b00ac84f7df8e5cf8c41372fc28c8c85671a SHA512 8682c1236b2f6bf6593ca9c75c83d669bd822b728703bbe2daea331cb9b1c68c73546ef6954991644e37dabc123e0de9bffd6cac7f1921e052b36b3ff1d36c62 WHIRLPOOL db797d98dc1cfc5a4a9b094f0739cfba0c97a7afec7474e0ddd4382a503706fabb9980cdac26480d1d5bf5d26626253858ed8f6bbf2a7755293d416c4eea00d6
+EBUILD jdepend-2.9-r5.ebuild 1040 SHA256 128f259d7cb310cec3746cefcf1719e721078c00a922f3c9c43224e2ab616b06 SHA512 53a1bcf7ebe1325286caf2b8c2de22bfa68e3fd9e85a665ce129e1ed526a9c6472014a0f88dd8b09a85abc45a48044f32d85ca14864667d93bcf0d6523d3a2da WHIRLPOOL e6945613dc7bd870ee931e78725ea9c88c0d49f8e1f4720ed09b0a53ef025c59ddb97b963f3d21f2e6e51c36ea108c9191a86f682c17d2f20e66f49cab121017
+MISC ChangeLog 6557 SHA256 eeae435729e20a6c3536d4b8cd91c1f1313177edfe5a740286a3c89f52b83d7f SHA512 4efdf6815974bb36d7a6940508023d2b0b1458f500860b7f943083892c385b393b152a68d47f26aa2912a76c3c5251c563e206fcd442008bc3177107b66b1770 WHIRLPOOL 33ba556a23f0f420efade78a49c2181e9688c082ce502fbea98bad0dfa29caadefad1933176c9e0cb89745282093db69df86f128aee49270cfbc49a427c46bb0
 MISC metadata.xml 157 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9 SHA512 bbae663e26f48fdc5e272adc2b06c14f77f34c53caf84acb53908ff036e7c12a3edbbc0929d2db56bee861a453381d979c7e0983a23716f629ed2135c22ffece WHIRLPOOL 887e153e2481e7d76f0f1b67a395f10f0328b93930185ecdb8fcb5fe3c50f839086a18831d61cf45b34657aaffca6c3b7900cf3c04b712846a05027a84602448
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUDHU1AAoJEKCEBkJ3xQHtQ90IAKvbT4ZFq+7/Mye8o94US961
-pzGTeNEbJUdy/eJatsZM7QzbLOAnEIQojhqermz+NWDNsK24Vg6Typi0ANdsnwVC
-DxejTBoHniC/axL9CnfasPbU1IuwnvmLYi5v7hRMWglxmt09uGALOu7znihGgEiG
-ldNe7zncsAqh5W1WKP6XvGBYXr3tZFVsjhrFiG8IeDyzXfEe1STO0VsTM9cfk7WZ
-BPKkLD+t86haQdh4N15tChjZZiGD5xKeYaUCPK5oyBDbXpEGoCLlC1PxRJN9TN2L
-UHxJ13xwe1iTaAOGzl+ggVK+PB6pFd5wVQQFKuX8rkAgzs5jsDlIRQ9ncm3XrRI=
-=Jdnw
+iQIcBAEBCAAGBQJVFSixAAoJELp701BxlEWfnTsP/1SyJqf7rVnF/SEI2fodkF0Z
+H9NVNSmUPGeFP6HpXvmtdoLXJYWfQE4CPUHfy5+E8DXq6IGrs0dbNix9heB+BU5/
+c/CB3eHcMPE03H5i1ky6g1yunY+c/yRmT2I8s9plyeRAO0yaBW4rg5+ib9JvyIXc
+T8hosu7jUipUb2CU+v6ncfmX44FusRv8H1v4L+q+Y+tJphGa3EvfT2h4PAhNUvb2
+jA0comf1zn9vhcfwtS8CjyOBBhMbpCZckPNtPQQwYwweL6vZzuYU+mt1bhbJ5hE9
+GCa0lEKWHruGABPVcYMjFItrx0JBDCK7CDhOvspG15w1NkwXNHEhw0DOtZCGgzy/
+yhqz0oU0JWokNGbfNAPsvu+NYvVnZ9f2DdaoUIs1w9dqVEOd5Wn4Hum67bg62l5v
+af7zAScSDj4c+eC7PQejyolhp7Gp9Zog5oPJtUIepc1lWtAMdgnDFq/8FxbSwEXQ
+20WuxVutz+ttFSSPU35qUw6w1Y1uUT7jhgMjWAYgiB4ETWS/u9yJelHdaPp73fgW
+Q7AhFp+25jSel1XJn7D+XDo8iK3212+v99CBWq+ZgSLj2/eOtzWDnSyxSXdFTyHG
+a9yDA+FAprh8hFlKKFYZCX19dFGxy0Zfnxzet/S0LKNcOr5ntogV2j77r7TjTim2
+j8c+OILsiIi9CzTI0YcI
+=fn9l
 -----END PGP SIGNATURE-----
