@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/jdepend
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jdepend/ChangeLog,v 1.56 2014/09/07 15:09:36 ercpe Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jdepend/ChangeLog,v 1.57 2015/03/27 09:53:52 ago Exp $
+
+  27 Mar 2015; Agostino Sarubbo <ago@gentoo.org> jdepend-2.9-r5.ebuild:
+  Stable for amd64, wrt bug #535078
 
 *jdepend-2.9-r5 (07 Sep 2014)
 
